kubernetes/emby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: emby
  name: emby
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emby
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: emby
    spec:
      containers:
        - env:
            - name: GID
              value: "20"
            - name: GIDLIST
              value: "20"
            - name: UID
              value: "502"
          image: emby/embyserver
          name: embyserver
          ports:
            - containerPort: 8096
            - containerPort: 8920
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: emby-config
            - mountPath: /mnt/share1
              name: emby-movie
            - mountPath: /mnt/share2
              name: tv-media
      restartPolicy: Always
      volumes:
        - name: emby-config
          hostPath:
            path: /MEDIA/EMBY_CONFIG
        - name: emby-movie
          hostPath:
            path: /MEDIA/MOVIE
        - name: tv-media
          hostPath:
            path: /MEDIA/data/media/tv
        - name: movie-media
          hostPath:
            path: /MEDIA/data/media/movies
status: {}
